--- a/my-app/src/Map/Map.css
+++ b/my-app/src/Map/Map.css
@@ -1,20 +1,54 @@
 .ol-map {
-    min-width: 600px;
-    min-height: 500px;
-    /* margin: 50px;
+  min-width: 600px;
+  min-height: 500px;
+  /* margin: 50px;
     height: 500px;
     width: "100%"; */
-    height: 100%;
+  height: 100%;
 }
 
 .ol-control {
-    position: absolute;
-    background-color: rgba(255,255,255,0.4);
-    border-radius: 4px;
-    padding: 2px;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 4px;
+  padding: 2px;
 }
 
 .ol-full-screen {
-    top: .5em;
-    right: .5em;
+  top: 0.5em;
+  right: 0.5em;
+}
+
+.ol-tooltip {
+  position: relative;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+  color: white;
+  padding: 4px 8px;
+  opacity: 0.7;
+  white-space: nowrap;
+  font-size: 12px;
+}
+.ol-tooltip-measure {
+  opacity: 1;
+  font-weight: bold;
+}
+.ol-tooltip-static {
+  background-color: #ffcc33;
+  color: black;
+  border: 1px solid white;
+}
+.ol-tooltip-measure:before,
+.ol-tooltip-static:before {
+  border-top: 6px solid rgba(0, 0, 0, 0.5);
+  border-right: 6px solid transparent;
+  border-left: 6px solid transparent;
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  margin-left: -7px;
+  left: 50%;
+}
+.ol-tooltip-static:before {
+  border-top-color: #ffcc33;
 }
